# ipy_show_image

./: .gitignore  README.md  demo.ipynb  jupyter_show_image.py  jupyter_show_img.py  pyproject.toml  setup.cfg  show_image.py
