 
[metadata]
name = show-image
version = 0.0.1
author = Adynathos
author_email = adynathos@protonmail.com
description = Display image in internactive notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/adynathos/jupyter_show_image
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
py_modules = show_image
python_requires = >=3.6
install_requires =
	pillow >= 5.3.0
	numpy >= 1.17.0
	ipython >= 7.0.0
	matplotlib >= 3.0.0

